--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -34,7 +34,7 @@
                                     <div class="msg-inbox">
                         
                                         <div class="chats">
-                                        <div class="msg-page">
+                                        <div class="msg-page" id="msg-page">
                                             <div class="received-chats">
                                                 <div class="received-chats-name">
                                                     <p class="sender-display-name">grandeefidel:</p>
